src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    BOOL
    DO
    DOUBLE
    ERROR
    SETEQUAL
    float_const
    int_const
    string_const

Grammar

Rule 0     S' -> start
Rule 1     start -> class_decl
Rule 2     class_decl -> CLASS ID LCURLY class_body RCURLY
Rule 3     class_decl -> CLASS ID EXTENDS ID LCURLY class_body RCURLY
Rule 4     class_body -> field_decl
Rule 5     class_body -> method_decl
Rule 6     class_body -> constructor_decl
Rule 7     class_body -> class_body field_decl
Rule 8     class_body -> class_body method_decl
Rule 9     class_body -> class_body constructor_decl
Rule 10    field_decl -> modifier var_decl
Rule 11    modifier -> PUBLIC
Rule 12    modifier -> PRIVATE
Rule 13    modifier -> PUBLIC STATIC
Rule 14    modifier -> PRIVATE STATIC
Rule 15    modifier -> empty
Rule 16    var_decl -> type variables SEMICOLON
Rule 17    type -> INT
Rule 18    type -> FLOAT
Rule 19    type -> BOOLEAN
Rule 20    type -> ID
Rule 21    variables -> variable
Rule 22    variables -> variable COMMA variables
Rule 23    variable -> ID
Rule 24    variable -> ID LBRACKET RBRACKET
Rule 25    method_decl -> modifier type ID block
Rule 26    method_decl -> modifier type ID formals block
Rule 27    method_decl -> modifier VOID ID block
Rule 28    method_decl -> modifier VOID ID formals block
Rule 29    constructor_decl -> modifier ID block
Rule 30    constructor_decl -> modifier ID formals block
Rule 31    formals -> formal_param
Rule 32    formals -> formal_param COMMA formals
Rule 33    formal_param -> type variable
Rule 34    block -> LCURLY stmt RCURLY
Rule 35    stmt -> IF LPAREN expression RPAREN stmt
Rule 36    stmt -> IF LPAREN expression RPAREN stmt ELSE stmt
Rule 37    stmt -> WHILE LPAREN expression RPAREN stmt
Rule 38    stmt -> FOR LPAREN stmt_expression SEMICOLON expression SEMICOLON stmt_expression RPAREN stmt
Rule 39    stmt -> RETURN expression SEMICOLON
Rule 40    stmt -> RETURN SEMICOLON
Rule 41    stmt -> stmt_expression SEMICOLON
Rule 42    stmt -> BREAK SEMICOLON
Rule 43    stmt -> CONTINUE SEMICOLON
Rule 44    stmt -> block
Rule 45    stmt -> var_decl
Rule 46    stmt -> SEMICOLON
Rule 47    literal -> INTEGER
Rule 48    literal -> FLOAT
Rule 49    literal -> STRING
Rule 50    literal -> NULL
Rule 51    literal -> FALSE
Rule 52    literal -> TRUE
Rule 53    primary -> literal
Rule 54    primary -> THIS
Rule 55    primary -> SUPER
Rule 56    primary -> LPAREN expression RPAREN
Rule 57    primary -> NEW ID
Rule 58    primary -> NEW ID LPAREN arguments RPAREN
Rule 59    primary -> method_invocation
Rule 60    primary -> lhs
Rule 61    arguments -> expression
Rule 62    arguments -> expression COMMA arguments
Rule 63    lhs -> field_access
Rule 64    field_access -> primary DOT ID
Rule 65    field_access -> ID
Rule 66    method_invocation -> field_access LPAREN arguments RPAREN
Rule 67    method_invocation -> field_access LPAREN RPAREN
Rule 68    expression -> primary
Rule 69    expression -> assign
Rule 70    expression -> expression arith_op expression
Rule 71    expression -> expression bool_op expression
Rule 72    expression -> unary_op expression
Rule 73    assign -> lhs EQUAL expression
Rule 74    arith_op -> PLUS
Rule 75    arith_op -> MINUS
Rule 76    arith_op -> TIMES
Rule 77    arith_op -> DIVIDE
Rule 78    bool_op -> GREATER
Rule 79    bool_op -> LESS
Rule 80    bool_op -> GREATEREQ
Rule 81    bool_op -> LESSEQ
Rule 82    bool_op -> EQUAL
Rule 83    bool_op -> NOTEQUAL
Rule 84    bool_op -> AND
Rule 85    bool_op -> OR
Rule 86    unary_op -> PLUS
Rule 87    unary_op -> MINUS
Rule 88    unary_op -> NOT
Rule 89    stmt_expression -> assign
Rule 90    stmt_expression -> method_invocation
Rule 91    empty -> <empty>

Terminals, with rules where they appear

AND                  : 84
BOOL                 : 
BOOLEAN              : 19
BREAK                : 42
CLASS                : 2 3
COMMA                : 22 32 62
CONTINUE             : 43
DIVIDE               : 77
DO                   : 
DOT                  : 64
DOUBLE               : 
ELSE                 : 36
EQUAL                : 73 82
ERROR                : 
EXTENDS              : 3
FALSE                : 51
FLOAT                : 18 48
FOR                  : 38
GREATER              : 78
GREATEREQ            : 80
ID                   : 2 3 3 20 23 24 25 26 27 28 29 30 57 58 64 65
IF                   : 35 36
INT                  : 17
INTEGER              : 47
LBRACKET             : 24
LCURLY               : 2 3 34
LESS                 : 79
LESSEQ               : 81
LPAREN               : 35 36 37 38 56 58 66 67
MINUS                : 75 87
NEW                  : 57 58
NOT                  : 88
NOTEQUAL             : 83
NULL                 : 50
OR                   : 85
PLUS                 : 74 86
PRIVATE              : 12 14
PUBLIC               : 11 13
RBRACKET             : 24
RCURLY               : 2 3 34
RETURN               : 39 40
RPAREN               : 35 36 37 38 56 58 66 67
SEMICOLON            : 16 38 38 39 40 41 42 43 46
SETEQUAL             : 
STATIC               : 13 14
STRING               : 49
SUPER                : 55
THIS                 : 54
TIMES                : 76
TRUE                 : 52
VOID                 : 27 28
WHILE                : 37
error                : 
float_const          : 
int_const            : 
string_const         : 

Nonterminals, with rules where they appear

arguments            : 58 62 66
arith_op             : 70
assign               : 69 89
block                : 25 26 27 28 29 30 44
bool_op              : 71
class_body           : 2 3 7 8 9
class_decl           : 1
constructor_decl     : 6 9
empty                : 15
expression           : 35 36 37 38 39 56 61 62 70 70 71 71 72 73
field_access         : 63 66 67
field_decl           : 4 7
formal_param         : 31 32
formals              : 26 28 30 32
lhs                  : 60 73
literal              : 53
method_decl          : 5 8
method_invocation    : 59 90
modifier             : 10 25 26 27 28 29 30
primary              : 64 68
start                : 0
stmt                 : 34 35 36 36 37 38
stmt_expression      : 38 38 41
type                 : 16 25 26 33
unary_op             : 72
var_decl             : 10 45
variable             : 21 22 33
variables            : 16 22

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . class_decl
    (2) class_decl -> . CLASS ID LCURLY class_body RCURLY
    (3) class_decl -> . CLASS ID EXTENDS ID LCURLY class_body RCURLY

    CLASS           shift and go to state 3

    start                          shift and go to state 1
    class_decl                     shift and go to state 2

state 1

    (0) S' -> start .



state 2

    (1) start -> class_decl .

    $end            reduce using rule 1 (start -> class_decl .)


state 3

    (2) class_decl -> CLASS . ID LCURLY class_body RCURLY
    (3) class_decl -> CLASS . ID EXTENDS ID LCURLY class_body RCURLY

    ID              shift and go to state 4


state 4

    (2) class_decl -> CLASS ID . LCURLY class_body RCURLY
    (3) class_decl -> CLASS ID . EXTENDS ID LCURLY class_body RCURLY

    LCURLY          shift and go to state 5
    EXTENDS         shift and go to state 6


state 5

    (2) class_decl -> CLASS ID LCURLY . class_body RCURLY
    (4) class_body -> . field_decl
    (5) class_body -> . method_decl
    (6) class_body -> . constructor_decl
    (7) class_body -> . class_body field_decl
    (8) class_body -> . class_body method_decl
    (9) class_body -> . class_body constructor_decl
    (10) field_decl -> . modifier var_decl
    (25) method_decl -> . modifier type ID block
    (26) method_decl -> . modifier type ID formals block
    (27) method_decl -> . modifier VOID ID block
    (28) method_decl -> . modifier VOID ID formals block
    (29) constructor_decl -> . modifier ID block
    (30) constructor_decl -> . modifier ID formals block
    (11) modifier -> . PUBLIC
    (12) modifier -> . PRIVATE
    (13) modifier -> . PUBLIC STATIC
    (14) modifier -> . PRIVATE STATIC
    (15) modifier -> . empty
    (91) empty -> .

    PUBLIC          shift and go to state 12
    PRIVATE         shift and go to state 13
    VOID            reduce using rule 91 (empty -> .)
    ID              reduce using rule 91 (empty -> .)
    INT             reduce using rule 91 (empty -> .)
    FLOAT           reduce using rule 91 (empty -> .)
    BOOLEAN         reduce using rule 91 (empty -> .)

    class_body                     shift and go to state 7
    field_decl                     shift and go to state 8
    method_decl                    shift and go to state 9
    constructor_decl               shift and go to state 10
    modifier                       shift and go to state 11
    empty                          shift and go to state 14

state 6

    (3) class_decl -> CLASS ID EXTENDS . ID LCURLY class_body RCURLY

    ID              shift and go to state 15


state 7

    (2) class_decl -> CLASS ID LCURLY class_body . RCURLY
    (7) class_body -> class_body . field_decl
    (8) class_body -> class_body . method_decl
    (9) class_body -> class_body . constructor_decl
    (10) field_decl -> . modifier var_decl
    (25) method_decl -> . modifier type ID block
    (26) method_decl -> . modifier type ID formals block
    (27) method_decl -> . modifier VOID ID block
    (28) method_decl -> . modifier VOID ID formals block
    (29) constructor_decl -> . modifier ID block
    (30) constructor_decl -> . modifier ID formals block
    (11) modifier -> . PUBLIC
    (12) modifier -> . PRIVATE
    (13) modifier -> . PUBLIC STATIC
    (14) modifier -> . PRIVATE STATIC
    (15) modifier -> . empty
    (91) empty -> .

    RCURLY          shift and go to state 16
    PUBLIC          shift and go to state 12
    PRIVATE         shift and go to state 13
    VOID            reduce using rule 91 (empty -> .)
    ID              reduce using rule 91 (empty -> .)
    INT             reduce using rule 91 (empty -> .)
    FLOAT           reduce using rule 91 (empty -> .)
    BOOLEAN         reduce using rule 91 (empty -> .)

    field_decl                     shift and go to state 17
    method_decl                    shift and go to state 18
    constructor_decl               shift and go to state 19
    modifier                       shift and go to state 11
    empty                          shift and go to state 14

state 8

    (4) class_body -> field_decl .

    RCURLY          reduce using rule 4 (class_body -> field_decl .)
    PUBLIC          reduce using rule 4 (class_body -> field_decl .)
    PRIVATE         reduce using rule 4 (class_body -> field_decl .)
    VOID            reduce using rule 4 (class_body -> field_decl .)
    ID              reduce using rule 4 (class_body -> field_decl .)
    INT             reduce using rule 4 (class_body -> field_decl .)
    FLOAT           reduce using rule 4 (class_body -> field_decl .)
    BOOLEAN         reduce using rule 4 (class_body -> field_decl .)


state 9

    (5) class_body -> method_decl .

    RCURLY          reduce using rule 5 (class_body -> method_decl .)
    PUBLIC          reduce using rule 5 (class_body -> method_decl .)
    PRIVATE         reduce using rule 5 (class_body -> method_decl .)
    VOID            reduce using rule 5 (class_body -> method_decl .)
    ID              reduce using rule 5 (class_body -> method_decl .)
    INT             reduce using rule 5 (class_body -> method_decl .)
    FLOAT           reduce using rule 5 (class_body -> method_decl .)
    BOOLEAN         reduce using rule 5 (class_body -> method_decl .)


state 10

    (6) class_body -> constructor_decl .

    RCURLY          reduce using rule 6 (class_body -> constructor_decl .)
    PUBLIC          reduce using rule 6 (class_body -> constructor_decl .)
    PRIVATE         reduce using rule 6 (class_body -> constructor_decl .)
    VOID            reduce using rule 6 (class_body -> constructor_decl .)
    ID              reduce using rule 6 (class_body -> constructor_decl .)
    INT             reduce using rule 6 (class_body -> constructor_decl .)
    FLOAT           reduce using rule 6 (class_body -> constructor_decl .)
    BOOLEAN         reduce using rule 6 (class_body -> constructor_decl .)


state 11

    (10) field_decl -> modifier . var_decl
    (25) method_decl -> modifier . type ID block
    (26) method_decl -> modifier . type ID formals block
    (27) method_decl -> modifier . VOID ID block
    (28) method_decl -> modifier . VOID ID formals block
    (29) constructor_decl -> modifier . ID block
    (30) constructor_decl -> modifier . ID formals block
    (16) var_decl -> . type variables SEMICOLON
    (17) type -> . INT
    (18) type -> . FLOAT
    (19) type -> . BOOLEAN
    (20) type -> . ID

    VOID            shift and go to state 23
    ID              shift and go to state 22
    INT             shift and go to state 24
    FLOAT           shift and go to state 25
    BOOLEAN         shift and go to state 26

    var_decl                       shift and go to state 20
    type                           shift and go to state 21

state 12

    (11) modifier -> PUBLIC .
    (13) modifier -> PUBLIC . STATIC

    VOID            reduce using rule 11 (modifier -> PUBLIC .)
    ID              reduce using rule 11 (modifier -> PUBLIC .)
    INT             reduce using rule 11 (modifier -> PUBLIC .)
    FLOAT           reduce using rule 11 (modifier -> PUBLIC .)
    BOOLEAN         reduce using rule 11 (modifier -> PUBLIC .)
    STATIC          shift and go to state 27


state 13

    (12) modifier -> PRIVATE .
    (14) modifier -> PRIVATE . STATIC

    VOID            reduce using rule 12 (modifier -> PRIVATE .)
    ID              reduce using rule 12 (modifier -> PRIVATE .)
    INT             reduce using rule 12 (modifier -> PRIVATE .)
    FLOAT           reduce using rule 12 (modifier -> PRIVATE .)
    BOOLEAN         reduce using rule 12 (modifier -> PRIVATE .)
    STATIC          shift and go to state 28


state 14

    (15) modifier -> empty .

    VOID            reduce using rule 15 (modifier -> empty .)
    ID              reduce using rule 15 (modifier -> empty .)
    INT             reduce using rule 15 (modifier -> empty .)
    FLOAT           reduce using rule 15 (modifier -> empty .)
    BOOLEAN         reduce using rule 15 (modifier -> empty .)


state 15

    (3) class_decl -> CLASS ID EXTENDS ID . LCURLY class_body RCURLY

    LCURLY          shift and go to state 29


state 16

    (2) class_decl -> CLASS ID LCURLY class_body RCURLY .

    $end            reduce using rule 2 (class_decl -> CLASS ID LCURLY class_body RCURLY .)


state 17

    (7) class_body -> class_body field_decl .

    RCURLY          reduce using rule 7 (class_body -> class_body field_decl .)
    PUBLIC          reduce using rule 7 (class_body -> class_body field_decl .)
    PRIVATE         reduce using rule 7 (class_body -> class_body field_decl .)
    VOID            reduce using rule 7 (class_body -> class_body field_decl .)
    ID              reduce using rule 7 (class_body -> class_body field_decl .)
    INT             reduce using rule 7 (class_body -> class_body field_decl .)
    FLOAT           reduce using rule 7 (class_body -> class_body field_decl .)
    BOOLEAN         reduce using rule 7 (class_body -> class_body field_decl .)


state 18

    (8) class_body -> class_body method_decl .

    RCURLY          reduce using rule 8 (class_body -> class_body method_decl .)
    PUBLIC          reduce using rule 8 (class_body -> class_body method_decl .)
    PRIVATE         reduce using rule 8 (class_body -> class_body method_decl .)
    VOID            reduce using rule 8 (class_body -> class_body method_decl .)
    ID              reduce using rule 8 (class_body -> class_body method_decl .)
    INT             reduce using rule 8 (class_body -> class_body method_decl .)
    FLOAT           reduce using rule 8 (class_body -> class_body method_decl .)
    BOOLEAN         reduce using rule 8 (class_body -> class_body method_decl .)


state 19

    (9) class_body -> class_body constructor_decl .

    RCURLY          reduce using rule 9 (class_body -> class_body constructor_decl .)
    PUBLIC          reduce using rule 9 (class_body -> class_body constructor_decl .)
    PRIVATE         reduce using rule 9 (class_body -> class_body constructor_decl .)
    VOID            reduce using rule 9 (class_body -> class_body constructor_decl .)
    ID              reduce using rule 9 (class_body -> class_body constructor_decl .)
    INT             reduce using rule 9 (class_body -> class_body constructor_decl .)
    FLOAT           reduce using rule 9 (class_body -> class_body constructor_decl .)
    BOOLEAN         reduce using rule 9 (class_body -> class_body constructor_decl .)


state 20

    (10) field_decl -> modifier var_decl .

    RCURLY          reduce using rule 10 (field_decl -> modifier var_decl .)
    PUBLIC          reduce using rule 10 (field_decl -> modifier var_decl .)
    PRIVATE         reduce using rule 10 (field_decl -> modifier var_decl .)
    VOID            reduce using rule 10 (field_decl -> modifier var_decl .)
    ID              reduce using rule 10 (field_decl -> modifier var_decl .)
    INT             reduce using rule 10 (field_decl -> modifier var_decl .)
    FLOAT           reduce using rule 10 (field_decl -> modifier var_decl .)
    BOOLEAN         reduce using rule 10 (field_decl -> modifier var_decl .)


state 21

    (25) method_decl -> modifier type . ID block
    (26) method_decl -> modifier type . ID formals block
    (16) var_decl -> type . variables SEMICOLON
    (21) variables -> . variable
    (22) variables -> . variable COMMA variables
    (23) variable -> . ID
    (24) variable -> . ID LBRACKET RBRACKET

    ID              shift and go to state 30

    variables                      shift and go to state 31
    variable                       shift and go to state 32

state 22

    (29) constructor_decl -> modifier ID . block
    (30) constructor_decl -> modifier ID . formals block
    (20) type -> ID .
    (34) block -> . LCURLY stmt RCURLY
    (31) formals -> . formal_param
    (32) formals -> . formal_param COMMA formals
    (33) formal_param -> . type variable
    (17) type -> . INT
    (18) type -> . FLOAT
    (19) type -> . BOOLEAN
    (20) type -> . ID

  ! shift/reduce conflict for ID resolved as shift
    LCURLY          shift and go to state 36
    INT             shift and go to state 24
    FLOAT           shift and go to state 25
    BOOLEAN         shift and go to state 26
    ID              shift and go to state 33

  ! ID              [ reduce using rule 20 (type -> ID .) ]

    block                          shift and go to state 34
    formals                        shift and go to state 35
    formal_param                   shift and go to state 37
    type                           shift and go to state 38

state 23

    (27) method_decl -> modifier VOID . ID block
    (28) method_decl -> modifier VOID . ID formals block

    ID              shift and go to state 39


state 24

    (17) type -> INT .

    ID              reduce using rule 17 (type -> INT .)


state 25

    (18) type -> FLOAT .

    ID              reduce using rule 18 (type -> FLOAT .)


state 26

    (19) type -> BOOLEAN .

    ID              reduce using rule 19 (type -> BOOLEAN .)


state 27

    (13) modifier -> PUBLIC STATIC .

    VOID            reduce using rule 13 (modifier -> PUBLIC STATIC .)
    ID              reduce using rule 13 (modifier -> PUBLIC STATIC .)
    INT             reduce using rule 13 (modifier -> PUBLIC STATIC .)
    FLOAT           reduce using rule 13 (modifier -> PUBLIC STATIC .)
    BOOLEAN         reduce using rule 13 (modifier -> PUBLIC STATIC .)


state 28

    (14) modifier -> PRIVATE STATIC .

    VOID            reduce using rule 14 (modifier -> PRIVATE STATIC .)
    ID              reduce using rule 14 (modifier -> PRIVATE STATIC .)
    INT             reduce using rule 14 (modifier -> PRIVATE STATIC .)
    FLOAT           reduce using rule 14 (modifier -> PRIVATE STATIC .)
    BOOLEAN         reduce using rule 14 (modifier -> PRIVATE STATIC .)


state 29

    (3) class_decl -> CLASS ID EXTENDS ID LCURLY . class_body RCURLY
    (4) class_body -> . field_decl
    (5) class_body -> . method_decl
    (6) class_body -> . constructor_decl
    (7) class_body -> . class_body field_decl
    (8) class_body -> . class_body method_decl
    (9) class_body -> . class_body constructor_decl
    (10) field_decl -> . modifier var_decl
    (25) method_decl -> . modifier type ID block
    (26) method_decl -> . modifier type ID formals block
    (27) method_decl -> . modifier VOID ID block
    (28) method_decl -> . modifier VOID ID formals block
    (29) constructor_decl -> . modifier ID block
    (30) constructor_decl -> . modifier ID formals block
    (11) modifier -> . PUBLIC
    (12) modifier -> . PRIVATE
    (13) modifier -> . PUBLIC STATIC
    (14) modifier -> . PRIVATE STATIC
    (15) modifier -> . empty
    (91) empty -> .

    PUBLIC          shift and go to state 12
    PRIVATE         shift and go to state 13
    VOID            reduce using rule 91 (empty -> .)
    ID              reduce using rule 91 (empty -> .)
    INT             reduce using rule 91 (empty -> .)
    FLOAT           reduce using rule 91 (empty -> .)
    BOOLEAN         reduce using rule 91 (empty -> .)

    class_body                     shift and go to state 40
    field_decl                     shift and go to state 8
    method_decl                    shift and go to state 9
    constructor_decl               shift and go to state 10
    modifier                       shift and go to state 11
    empty                          shift and go to state 14

state 30

    (25) method_decl -> modifier type ID . block
    (26) method_decl -> modifier type ID . formals block
    (23) variable -> ID .
    (24) variable -> ID . LBRACKET RBRACKET
    (34) block -> . LCURLY stmt RCURLY
    (31) formals -> . formal_param
    (32) formals -> . formal_param COMMA formals
    (33) formal_param -> . type variable
    (17) type -> . INT
    (18) type -> . FLOAT
    (19) type -> . BOOLEAN
    (20) type -> . ID

    COMMA           reduce using rule 23 (variable -> ID .)
    SEMICOLON       reduce using rule 23 (variable -> ID .)
    LBRACKET        shift and go to state 43
    LCURLY          shift and go to state 36
    INT             shift and go to state 24
    FLOAT           shift and go to state 25
    BOOLEAN         shift and go to state 26
    ID              shift and go to state 33

    type                           shift and go to state 38
    block                          shift and go to state 41
    formals                        shift and go to state 42
    formal_param                   shift and go to state 37

state 31

    (16) var_decl -> type variables . SEMICOLON

    SEMICOLON       shift and go to state 44


state 32

    (21) variables -> variable .
    (22) variables -> variable . COMMA variables

    SEMICOLON       reduce using rule 21 (variables -> variable .)
    COMMA           shift and go to state 45


state 33

    (20) type -> ID .

    ID              reduce using rule 20 (type -> ID .)


state 34

    (29) constructor_decl -> modifier ID block .

    RCURLY          reduce using rule 29 (constructor_decl -> modifier ID block .)
    PUBLIC          reduce using rule 29 (constructor_decl -> modifier ID block .)
    PRIVATE         reduce using rule 29 (constructor_decl -> modifier ID block .)
    VOID            reduce using rule 29 (constructor_decl -> modifier ID block .)
    ID              reduce using rule 29 (constructor_decl -> modifier ID block .)
    INT             reduce using rule 29 (constructor_decl -> modifier ID block .)
    FLOAT           reduce using rule 29 (constructor_decl -> modifier ID block .)
    BOOLEAN         reduce using rule 29 (constructor_decl -> modifier ID block .)


state 35

    (30) constructor_decl -> modifier ID formals . block
    (34) block -> . LCURLY stmt RCURLY

    LCURLY          shift and go to state 36

    block                          shift and go to state 46

state 36

    (34) block -> LCURLY . stmt RCURLY
    (35) stmt -> . IF LPAREN expression RPAREN stmt
    (36) stmt -> . IF LPAREN expression RPAREN stmt ELSE stmt
    (37) stmt -> . WHILE LPAREN expression RPAREN stmt
    (38) stmt -> . FOR LPAREN stmt_expression SEMICOLON expression SEMICOLON stmt_expression RPAREN stmt
    (39) stmt -> . RETURN expression SEMICOLON
    (40) stmt -> . RETURN SEMICOLON
    (41) stmt -> . stmt_expression SEMICOLON
    (42) stmt -> . BREAK SEMICOLON
    (43) stmt -> . CONTINUE SEMICOLON
    (44) stmt -> . block
    (45) stmt -> . var_decl
    (46) stmt -> . SEMICOLON
    (89) stmt_expression -> . assign
    (90) stmt_expression -> . method_invocation
    (34) block -> . LCURLY stmt RCURLY
    (16) var_decl -> . type variables SEMICOLON
    (73) assign -> . lhs EQUAL expression
    (66) method_invocation -> . field_access LPAREN arguments RPAREN
    (67) method_invocation -> . field_access LPAREN RPAREN
    (17) type -> . INT
    (18) type -> . FLOAT
    (19) type -> . BOOLEAN
    (20) type -> . ID
    (63) lhs -> . field_access
    (64) field_access -> . primary DOT ID
    (65) field_access -> . ID
    (53) primary -> . literal
    (54) primary -> . THIS
    (55) primary -> . SUPER
    (56) primary -> . LPAREN expression RPAREN
    (57) primary -> . NEW ID
    (58) primary -> . NEW ID LPAREN arguments RPAREN
    (59) primary -> . method_invocation
    (60) primary -> . lhs
    (47) literal -> . INTEGER
    (48) literal -> . FLOAT
    (49) literal -> . STRING
    (50) literal -> . NULL
    (51) literal -> . FALSE
    (52) literal -> . TRUE

    IF              shift and go to state 48
    WHILE           shift and go to state 50
    FOR             shift and go to state 51
    RETURN          shift and go to state 54
    BREAK           shift and go to state 55
    CONTINUE        shift and go to state 56
    SEMICOLON       shift and go to state 53
    LCURLY          shift and go to state 36
    INT             shift and go to state 24
    FLOAT           shift and go to state 64
    BOOLEAN         shift and go to state 26
    ID              shift and go to state 65
    THIS            shift and go to state 68
    SUPER           shift and go to state 69
    LPAREN          shift and go to state 49
    NEW             shift and go to state 70
    INTEGER         shift and go to state 71
    STRING          shift and go to state 72
    NULL            shift and go to state 73
    FALSE           shift and go to state 74
    TRUE            shift and go to state 75

    stmt                           shift and go to state 47
    stmt_expression                shift and go to state 52
    block                          shift and go to state 57
    var_decl                       shift and go to state 58
    assign                         shift and go to state 59
    method_invocation              shift and go to state 60
    type                           shift and go to state 61
    lhs                            shift and go to state 62
    field_access                   shift and go to state 63
    primary                        shift and go to state 66
    literal                        shift and go to state 67

state 37

    (31) formals -> formal_param .
    (32) formals -> formal_param . COMMA formals

    LCURLY          reduce using rule 31 (formals -> formal_param .)
    COMMA           shift and go to state 76


state 38

    (33) formal_param -> type . variable
    (23) variable -> . ID
    (24) variable -> . ID LBRACKET RBRACKET

    ID              shift and go to state 78

    variable                       shift and go to state 77

state 39

    (27) method_decl -> modifier VOID ID . block
    (28) method_decl -> modifier VOID ID . formals block
    (34) block -> . LCURLY stmt RCURLY
    (31) formals -> . formal_param
    (32) formals -> . formal_param COMMA formals
    (33) formal_param -> . type variable
    (17) type -> . INT
    (18) type -> . FLOAT
    (19) type -> . BOOLEAN
    (20) type -> . ID

    LCURLY          shift and go to state 36
    INT             shift and go to state 24
    FLOAT           shift and go to state 25
    BOOLEAN         shift and go to state 26
    ID              shift and go to state 33

    block                          shift and go to state 79
    formals                        shift and go to state 80
    formal_param                   shift and go to state 37
    type                           shift and go to state 38

state 40

    (3) class_decl -> CLASS ID EXTENDS ID LCURLY class_body . RCURLY
    (7) class_body -> class_body . field_decl
    (8) class_body -> class_body . method_decl
    (9) class_body -> class_body . constructor_decl
    (10) field_decl -> . modifier var_decl
    (25) method_decl -> . modifier type ID block
    (26) method_decl -> . modifier type ID formals block
    (27) method_decl -> . modifier VOID ID block
    (28) method_decl -> . modifier VOID ID formals block
    (29) constructor_decl -> . modifier ID block
    (30) constructor_decl -> . modifier ID formals block
    (11) modifier -> . PUBLIC
    (12) modifier -> . PRIVATE
    (13) modifier -> . PUBLIC STATIC
    (14) modifier -> . PRIVATE STATIC
    (15) modifier -> . empty
    (91) empty -> .

    RCURLY          shift and go to state 81
    PUBLIC          shift and go to state 12
    PRIVATE         shift and go to state 13
    VOID            reduce using rule 91 (empty -> .)
    ID              reduce using rule 91 (empty -> .)
    INT             reduce using rule 91 (empty -> .)
    FLOAT           reduce using rule 91 (empty -> .)
    BOOLEAN         reduce using rule 91 (empty -> .)

    field_decl                     shift and go to state 17
    method_decl                    shift and go to state 18
    constructor_decl               shift and go to state 19
    modifier                       shift and go to state 11
    empty                          shift and go to state 14

state 41

    (25) method_decl -> modifier type ID block .

    RCURLY          reduce using rule 25 (method_decl -> modifier type ID block .)
    PUBLIC          reduce using rule 25 (method_decl -> modifier type ID block .)
    PRIVATE         reduce using rule 25 (method_decl -> modifier type ID block .)
    VOID            reduce using rule 25 (method_decl -> modifier type ID block .)
    ID              reduce using rule 25 (method_decl -> modifier type ID block .)
    INT             reduce using rule 25 (method_decl -> modifier type ID block .)
    FLOAT           reduce using rule 25 (method_decl -> modifier type ID block .)
    BOOLEAN         reduce using rule 25 (method_decl -> modifier type ID block .)


state 42

    (26) method_decl -> modifier type ID formals . block
    (34) block -> . LCURLY stmt RCURLY

    LCURLY          shift and go to state 36
